--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Marianny Marquez</a>
+        <a class="navbar-brand" href="/Responsive-Challenge-Week-3/index.html"
+          >Marianny Marquez</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +38,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../Responsive-Challenge-Week-3/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a
+                class="nav-link"
+                href="../Responsive-Challenge-Week-3/about.html"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -54,7 +63,11 @@
     <h1 class="text-center">Marianny Marquez</h1>
     <h3 class="text-center">Front-end developer, based in Colombia</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
+      <a
+        href="/Responsive-Challenge-Week-3/about.html#contact"
+        class="primary-link"
+        >Contact me</a
+      >
       <a href="about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
