--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/Responsive-Challenge-Week-3/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Contact Me - MyProfile.com</title>
   </head>
   <body>
