--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="../Responsive-Challenge-Week-3/about.html"
-                >About me</a
-              >
+              <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html#contact">Contact me</a>
