--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
               <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/Responsive-Challenge-Week-3/about.html#contact"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
