--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
               <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/Responsive-Challenge-Week-3/about.html#contact"
-                >Contact me</a
-              >
+              <a class="nav-link" href="about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -67,11 +63,7 @@
     <h1 class="text-center">Marianny Marquez</h1>
     <h3 class="text-center">Front-end developer, based in Colombia</h3>
     <div class="navigation-links mb-5">
-      <a
-        href="/Responsive-Challenge-Week-3/about.html#contact"
-        class="primary-link"
-        >Contact me</a
-      >
+      <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
