Links and titles Update

--- a/about.html
+++ b/about.html
@@ -68,6 +68,7 @@
           <img
             src="img/yoga.png"
             alt="yoga"
+            title="yoga"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
@@ -75,6 +76,7 @@
           <img
             src="img/weather.png"
             alt="weatherApp"
+            title="weatherApp"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
@@ -82,6 +84,7 @@
           <img
             src="img/yogurt.png"
             alt="yogurt"
+            title="yogurt"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
