--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/Responsive-Challenge-Week-3/index.html"
-          >Marianny Marquez</a
-        >
+        <a class="navbar-brand" href="index.html">Marianny Marquez</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,10 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../Responsive-Challenge-Week-3/index.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
@@ -69,7 +64,12 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="img/yoga.png" alt="yoga" class="img-fluid rounded" />
+          <img
+            src="img/yoga.png"
+            alt="yoga"
+            title="yoga"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -101,13 +101,19 @@
           <img
             src="img/weather.png"
             alt="weatherApp"
+            title="weatherApp"
             class="img-fluid rounded"
           />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="img/yogurt.png" alt="yogurt" class="img-fluid rounded" />
+          <img
+            src="img/yogurt.png"
+            alt="yogurt"
+            titl="yogurt"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
