--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             src="img/yoga.png"
             alt="yoga"
@@ -71,7 +71,7 @@
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6">
+        <div class="col">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -97,7 +97,7 @@
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             src="img/weather.png"
             alt="weatherApp"
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img
             src="img/yogurt.png"
             alt="yogurt"
@@ -115,7 +115,7 @@
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6">
+        <div class="col">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
